deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: site
          image: 211125773797.dkr.ecr.ap-south-1.amazonaws.com/my-ecr-repo/my-ecr-repo:08f4116887438853e8ffea0065dd221189f8caa8
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  -   protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
